# IABM2026

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  config.py  config.toml  configuration.toml  datasets.py  features.py  generate_images.py  main.py  metrics.py  models.py  pyproject.toml  train_model.py  variability.py
.github/workflows/: cd.yml  ci.yml
abstract/: .gitignore  IABM2026.cls  abstract.tex  generate_figure.py  references.bib
config/: batch_training.toml  experiment_with_pretrained.toml  generate.toml  train_bloodmnist.toml  train_pathmnist.toml  training_configuration.toml
logs/train/: events.out.tfevents.1764070405.timc-cami-102p.389231.0.v2  events.out.tfevents.1764070406.timc-cami-102p.389231.1.v2  events.out.tfevents.1764070627.timc-cami-102p.393826.0.v2  events.out.tfevents.1764070636.timc-cami-102p.393826.1.v2
notebooks/: ddm_with_MedMNIST.ipynb  results_analysis.py  variability_measure_medmnist.ipynb
notebooks/__marimo__/session/: results_analysis.py.json
results/: experiment_results.csv
src/domain/entities/: dataset.py  datasets.py  models.py  (+1 more)
src/infrastructure/: configuration.py  datasets.py  loaders.py  logging.py  metrics.py  models.py  tensorflow_diffusion_model.py
tests/: conftest.py  test_configuration.py  test_end_to_end.py  test_experiment_with_dummy_model.py  test_generate_and_save_images.py  test_model_load.py  test_model_save.py  test_tensorflow_model.py  test_train_and_save_model.py  test_train_model.py  test_training_tracker.py
tests/fixtures/: __init__.py  configuration_test_end_to_end.toml  dummy_model.py
(+15 files in other folders)
